--- a/package.json
+++ b/package.json
@@ -23,11 +23,13 @@
     "@angular/router": "^5.0.0",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
+    "parse": "^1.11.1",
     "primeng": "^5.2.5",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.0",
     "@angular-devkit/core": "^0.6.0",
     "@angular/cli": "^6.0.0",
     "@angular/compiler-cli": "^5.0.0",
@@ -35,6 +37,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/parse": "^1.11.0",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
@@ -47,7 +50,6 @@
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
     "tslint": "~5.7.0",
-    "typescript": "~2.4.2",
-    "@angular-devkit/build-angular": "~0.6.0"
+    "typescript": "~2.4.2"
   }
 }
