--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@types/gapi": "0.0.35",
+    "@types/gapi.auth2": "0.0.47",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "primeng": "^5.2.5",
