--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@types/gapi.auth2": "0.0.47",
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
+    "google-auth-library": "^1.5.0",
+    "jszip": "^3.1.5",
+    "parse": "^1.11.1",
     "primeng": "^5.2.7",
     "rxjs": "^5.5.11",
     "zone.js": "^0.8.14"
@@ -38,6 +41,7 @@
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
+    "@types/parse": "^1.11.0",
     "codelyzer": "^4.0.1",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
